--- a/modules/nf-core/crabs/insilicopcr/meta.yml
+++ b/modules/nf-core/crabs/insilicopcr/meta.yml
@@ -13,7 +13,7 @@ tools:
       documentation: https://github.com/gjeunen/reference_database_creator?tab=readme-ov-file#running-crabs
       tool_dev_url: https://github.com/gjeunen/reference_database_creator
       doi: https://doi.org/10.1111/1755-0998.13741
-      licence: ['MIT License']
+      licence: ["MIT License"]
 
 input:
   - meta:
