add type to meta

--- a/modules/nf-core/jvarkit/vcfpolyx/meta.yml
+++ b/modules/nf-core/jvarkit/vcfpolyx/meta.yml
@@ -26,18 +26,22 @@ tools:
 
 input:
   - meta:
+      type: map
       description: |
         Groovy Map containing VCF information
 
   - meta2:
+      type: map
       description: |
         Groovy Map containing fasta information
 
   - meta2:
+      type: map
       description: |
         Groovy Map containing fasta.fai information
 
   - meta3:
+      type: map
       description: |
         Groovy Map containing fasta.dict information
 
