--- a/modules/nf-core/bcftools/merge/tests/nextflow.gvcf.config
+++ b/modules/nf-core/bcftools/merge/tests/nextflow.gvcf.config
@@ -1,5 +1,5 @@
 process {
     withName: BCFTOOLS_MERGE {
-        ext.args = { "--force-samples --no-version -m none --output-type z --gvcf $fasta" }
+        ext.args = { "--force-samples --no-version --output-type z --gvcf $fasta" }
     }
 }
