fix test and linting

--- a/modules/nf-core/crabs/insilicopcr/meta.yml
+++ b/modules/nf-core/crabs/insilicopcr/meta.yml
@@ -3,6 +3,8 @@ description: CRABS extracts the amplicon region of the primer set by conducting 
 keywords:
   - insilico
   - PCR
+  - amplicon
+  - sequencing
 tools:
   - crabs:
       description: |
