--- a/modules/nf-core/mirtop/stats/meta.yml
+++ b/modules/nf-core/mirtop/stats/meta.yml
@@ -1,7 +1,7 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "mirtop_stats"
-description:  mirtop gff gets the number of isomiRs and miRNAs annotated in the GFF file by isomiR category.
+description: mirtop gff gets the number of isomiRs and miRNAs annotated in the GFF file by isomiR category.
 keywords:
   - mirna
   - isomir
@@ -12,7 +12,7 @@ tools:
       homepage: "https://github.com/miRTop/mirtop"
       documentation: "https://mirtop.readthedocs.io/en/latest/"
       tool_dev_url: "https://github.com/miRTop/mirtop"
-      licence: ['MIT License']
+      licence: ["MIT License"]
 
 input:
   - meta:
