--- a/modules/nf-core/mirtop/stats/environment.yml
+++ b/modules/nf-core/mirtop/stats/environment.yml
@@ -6,6 +6,4 @@ channels:
   - bioconda
 dependencies:
   - "bioconda::mirtop=0.4.25"
-  - "bioconda::samtools=1.15.1"
-  - "conda-forge::r-base=4.1.1"
-  - "conda-forge::r-data.table=1.14.2"
+  - "conda-forge::pandas=1.3.5"
