Locked r-base version

--- a/modules/nf-core/geoquery/getgeo/environment.yml
+++ b/modules/nf-core/geoquery/getgeo/environment.yml
@@ -4,3 +4,4 @@ channels:
   - bioconda
 dependencies:
   - bioconda::bioconductor-geoquery=2.70.0
+  - conda-forge::r-base=4.3.2 # Locked with container
