--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -362,9 +362,9 @@ iphop/download:
 iphop/predict:
   - modules/nf-core/iphop/predict/**
   - tests/modules/nf-core/iphop/predict/**
-ivar/variants:
-  - modules/nf-core/ivar/variants/**
-  - tests/modules/nf-core/ivar/variants/**
+ivar/consensus:
+  - modules/nf-core/ivar/consensus/**
+  - tests/modules/nf-core/ivar/consensus/**
 jupyternotebook:
   - modules/nf-core/jupyternotebook/**
   - tests/modules/nf-core/jupyternotebook/**
