Module meta.yml licenses - arrays in strings should not be in strings

--- a/modules/nf-core/verifybamid/verifybamid2/meta.yml
+++ b/modules/nf-core/verifybamid/verifybamid2/meta.yml
@@ -10,7 +10,7 @@ tools:
       documentation: "http://griffan.github.io/VerifyBamID"
       tool_dev_url: "https://github.com/Griffan/VerifyBamID"
       doi: "10.1101/gr.246934.118"
-      licence: "['MIT']"
+      licence: ['MIT']
 input:
   - meta:
       type: map
