--- a/modules/nf-core/fq/generate/meta.yml
+++ b/modules/nf-core/fq/generate/meta.yml
@@ -10,7 +10,7 @@ tools:
       homepage: "https://github.com/stjude-rust-labs/fq"
       documentation: "https://github.com/stjude-rust-labs/fq"
       tool_dev_url: "https://github.com/stjude-rust-labs/fq"
-      licence: "['MIT']"
+      licence: ['MIT']
 input:
   - meta:
       type: map
