License arrays: formatting

--- a/modules/nf-core/canu/meta.yml
+++ b/modules/nf-core/canu/meta.yml
@@ -12,7 +12,7 @@ tools:
       documentation: "https://canu.readthedocs.io/en/latest/tutorial.html"
       tool_dev_url: "https://github.com/marbl/canu"
       doi: "10.1101/gr.215087.116"
-      licence: ['GPL v2 and others']
+      licence: ["GPL v2 and others"]
 input:
   - meta:
       type: map
