--- a/modules/nf-core/gget/gget/meta.yml
+++ b/modules/nf-core/gget/gget/meta.yml
@@ -13,7 +13,7 @@ tools:
       documentation: "https://pachterlab.github.io/gget/"
       tool_dev_url: "https://github.com/pachterlab/gget"
       doi: "10.1093/bioinformatics/btac836"
-      licence: ['BSD-2-clause']
+      licence: ["BSD-2-clause"]
 input:
   - meta:
       type: map
