--- a/modules/nf-core/sequencetools/pileupcaller/meta.yml
+++ b/modules/nf-core/sequencetools/pileupcaller/meta.yml
@@ -16,7 +16,7 @@ tools:
       homepage: "https://github.com/stschiff/sequenceTools"
       documentation: "https://github.com/stschiff/sequenceTools#readme"
       tool_dev_url: "https://github.com/stschiff/sequenceTools"
-      licence: ['MIT']
+      licence: ["MIT"]
 input:
   # Only when we have meta
   - meta:
