--- a/modules/nf-core/duphold/meta.yml
+++ b/modules/nf-core/duphold/meta.yml
@@ -9,7 +9,7 @@ tools:
       documentation: "https://github.com/brentp/duphold"
       tool_dev_url: "https://github.com/brentp/duphold"
       doi: "10.1093/gigascience/giz040"
-      licence: ['MIT']
+      licence: ["MIT"]
 input:
   - meta:
       type: map
