--- a/modules/nf-core/genotyphi/parse/meta.yml
+++ b/modules/nf-core/genotyphi/parse/meta.yml
@@ -9,7 +9,7 @@ tools:
       homepage: "https://github.com/katholt/genotyphi"
       documentation: "https://github.com/katholt/genotyphi"
       tool_dev_url: "https://github.com/katholt/genotyphi"
-      licence: ['GPL v3']
+      licence: ["GPL v3"]
 input:
   - meta:
       type: map
