Add keywords to module meta files that were too short

--- a/modules/nf-core/fq/generate/meta.yml
+++ b/modules/nf-core/fq/generate/meta.yml
@@ -4,6 +4,8 @@ description: |
 keywords:
   - generate
   - fastq
+  - random
+  - sequence
 tools:
   - "fq":
       description: "fq is a library to generate and validate FASTQ file pairs."
