--- a/modules/nf-core/scramble/clusteranalysis/meta.yml
+++ b/modules/nf-core/scramble/clusteranalysis/meta.yml
@@ -3,6 +3,8 @@ description: The Cluster Analysis tool of Scramble analyses and interprets the s
 keywords:
   - soft-clipped clusters
   - scramble
+  - cluster analysis
+  - clusteridentifier
 tools:
   - "scramble":
       description: "Soft Clipped Read Alignment Mapper"
