--- a/modules/nf-core/verifybamid/verifybamid2/meta.yml
+++ b/modules/nf-core/verifybamid/verifybamid2/meta.yml
@@ -3,6 +3,8 @@ description: Detecting and estimating inter-sample DNA contamination became a cr
 keywords:
   - contamination
   - bam
+  - verifybamid
+  - DNA contamination estimation
 tools:
   - "verifybamid2":
       description: "A robust tool for DNA contamination estimation from sequence reads using ancestry-agnostic method."
