--- a/modules/nf-core/duphold/meta.yml
+++ b/modules/nf-core/duphold/meta.yml
@@ -2,6 +2,9 @@ name: "duphold"
 description: SV callers like lumpy look at split-reads and pair distances to find structural variants. This tool is a fast way to add depth information to those calls. This can be used as additional information for filtering variants; for example we will be skeptical of deletion calls that do not have lower than average coverage compared to regions with similar gc-content.
 keywords:
   - sort
+  - duphold
+  - structural variation
+  - depth information
 tools:
   - "duphold":
       description: "SV callers like lumpy look at split-reads and pair distances to find structural variants. This tool is a fast way to add depth information to those calls."
