--- a/modules/nf-core/genotyphi/parse/meta.yml
+++ b/modules/nf-core/genotyphi/parse/meta.yml
@@ -3,6 +3,7 @@ description: Genotype Salmonella Typhi from Mykrobe results
 keywords:
   - genotype
   - Salmonella Typhi
+  - Mykrobe
 tools:
   - "genotyphi":
       description: "Assign genotypes to Salmonella Typhi genomes based on VCF files (mapped to Typhi CT18 reference genome)"
