--- a/modules/nf-core/plink/recode/meta.yml
+++ b/modules/nf-core/plink/recode/meta.yml
@@ -2,6 +2,9 @@ name: "plink_recode"
 description: Recodes plink bfiles into a new text fileset applying different modifiers
 keywords:
   - recode
+  - bfiles
+  - plink
+  - whole genome association
 tools:
   - "plink":
       description: "Whole genome association analysis toolset, designed to perform a range of basic, large-scale analyses in a computationally efficient manner."
