Wrap string licenses as arrays

--- a/modules/nf-core/msisensor2/msi/meta.yml
+++ b/modules/nf-core/msisensor2/msi/meta.yml
@@ -8,7 +8,7 @@ tools:
       homepage: "https://github.com/niu-lab/msisensor2"
       documentation: "https://github.com/niu-lab/msisensor2/blob/master/README.md"
       tool_dev_url: "https://github.com/niu-lab/msisensor2"
-      licence: "GPL-3.0"
+      license: ["GPL-3.0"]
 input:
   - meta:
       type: map
