--- a/modules/nf-core/khmer/uniquekmers/meta.yml
+++ b/modules/nf-core/khmer/uniquekmers/meta.yml
@@ -18,7 +18,7 @@ input:
       description: fasta file
       pattern: "*.{fa,fasta}"
   - kmer_size:
-      type: value
+      type: string
       description: k-mer size to use
       pattern: "[0-9]+"
 output:
