--- a/modules/nf-core/sequencetools/pileupcaller/meta.yml
+++ b/modules/nf-core/sequencetools/pileupcaller/meta.yml
@@ -33,10 +33,10 @@ input:
         Eigenstrat format .snp file of the sites in the mpileup file to call genotypes on.
         Only alleles matching the Ref and Alt alleles of the provided snp file will be called.
   - calling_method:
-      type: value
+      type: string
       description: The desired calling method for pileupcaller. One of 'randomHaploid', 'randomDiploid', or 'majorityCall'.
   - output_format:
-      type: value
+      type: string
       description: The desired output format. One of 'PLINK', 'EIGENSTRAT', or 'FREQSUM'.
 output:
   #Only when we have meta
