Fix more meta types

--- a/modules/nf-core/gget/gget/meta.yml
+++ b/modules/nf-core/gget/gget/meta.yml
@@ -21,7 +21,7 @@ input:
         Groovy Map containing sample information
         e.g. [ id:'test' ]
   - files:
-      type: files
+      type: file
       description: |
         Optional input files which can be specified for certain tools. This is mostly used to supply a FASTA file for gget muscle.
 output:
