--- a/modules/nf-core/khmer/normalizebymedian/meta.yml
+++ b/modules/nf-core/khmer/normalizebymedian/meta.yml
@@ -13,11 +13,11 @@ tools:
       licence: ["BSD License"]
 input:
   - pe_reads:
-      type: files
+      type: file
       description: Paired-end interleaved fastq files
       pattern: "*.{fq,fastq}.gz"
   - se_reads:
-      type: files
+      type: file
       description: Single-end fastq files
       pattern: "*.{fq,fastq}.gz"
   - name:
