More types, keywords

--- a/modules/nf-core/fastk/histex/meta.yml
+++ b/modules/nf-core/fastk/histex/meta.yml
@@ -3,6 +3,7 @@ description: A fast K-mer counter for high-fidelity shotgun datasets
 keywords:
   - k-mer
   - histogram
+  - fastk
 tools:
   - "fastk":
       description: "A fast K-mer counter for high-fidelity shotgun datasets"
