--- a/modules/nf-core/khmer/normalizebymedian/meta.yml
+++ b/modules/nf-core/khmer/normalizebymedian/meta.yml
@@ -3,6 +3,7 @@ description: Module that calls normalize-by-median.py from khmer. The module can
 keywords:
   - digital normalization
   - khmer
+  - k-mer counting
 tools:
   - khmer:
       description: khmer k-mer counting library
