--- a/modules/nf-core/msisensor2/msi/meta.yml
+++ b/modules/nf-core/msisensor2/msi/meta.yml
@@ -2,6 +2,10 @@ name: "msisensor2_msi"
 description: msisensor2 detection of MSI regions.
 keywords:
   - msi
+  - microsatellite
+  - microsatellite instability
+  - tumor
+  - cfDNA
 tools:
   - "msisensor2":
       description: "MSIsensor2 is a novel algorithm based machine learning, featuring a large upgrade in the microsatellite instability (MSI) detection for tumor only sequencing data, including Cell-Free DNA (cfDNA), Formalin-Fixed Paraffin-Embedded(FFPE) and other sample types. The original MSIsensor is specially designed for tumor/normal paired sequencing data."
