--- a/modules/nf-core/motus/preplong/meta.yml
+++ b/modules/nf-core/motus/preplong/meta.yml
@@ -37,7 +37,7 @@ output:
       pattern: "versions.yml"
   - out:
       type: file
-      description: FILE converted file (gzipped), ready to be used by motus profile
+      description: converted file (gzipped), ready to be used by motus profile
       pattern: "*.{gz}"
   - db:
       type: directory
