--- a/modules/nf-core/motus/preplong/environment.yml
+++ b/modules/nf-core/motus/preplong/environment.yml
@@ -2,6 +2,5 @@ name: "motus_preplong"
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
-  - "bioconda::motus=3.1.0"
+  - bioconda::motus=3.1.0
