--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -539,6 +539,8 @@ jobs:
           - profile: conda
             path: modules/nf-core/deepcell/mesmer
           - profile: conda
+            path: modules/nf-core/deepvariant
+          - profile: conda
             path: modules/nf-core/deepvariant/callvariants
           - profile: conda
             path: modules/nf-core/deepvariant/makeexamples
