--- a/modules/nf-core/flye/tests/nextflow.config
+++ b/modules/nf-core/flye/tests/nextflow.config
@@ -1,4 +1,4 @@
 // profile=docker with tests flye_pacbio_raw and flye_nano_raw need more memory that the default of 3.GB
 process {
-        memory = 8.GB
+    memory = 7.5GB
 }
