--- a/modules/nf-core/seqcluster/collapse/meta.yml
+++ b/modules/nf-core/seqcluster/collapse/meta.yml
@@ -13,7 +13,7 @@ tools:
       documentation: "https://github.com/lpantano/seqcluster"
       tool_dev_url: "https://github.com/lpantano/seqcluster"
       doi: "10.1093/bioinformatics/btr527"
-      licence: ['MIT']
+      licence: ["MIT"]
 
 input:
   - meta:
