fixed some linter flagged issues

--- a/modules/nf-core/shigapass/environment.yml
+++ b/modules/nf-core/shigapass/environment.yml
@@ -1,5 +1,7 @@
+name: shigapass
 channels:
   - conda-forge
   - bioconda
+  - defaults
 dependencies:
-  - shigapass=1.5.0=hdfd78af_01
+  - bioconda::shigapass=1.5.0
