--- a/modules/nf-core/hmtnote/annotate/environment.yml
+++ b/modules/nf-core/hmtnote/annotate/environment.yml
@@ -3,6 +3,6 @@ channels:
   - bioconda
 dependencies:
   - conda-forge::python=3.6 # Locked with the container
-  - conda-forge::pip
+  - conda-forge::pip=21.3.1
   - pip:
       - hmtnote==0.7.2
