oppsss tag and TODO

--- a/modules/nf-core/jvarkit/vcffilterjdk/meta.yml
+++ b/modules/nf-core/jvarkit/vcffilterjdk/meta.yml
@@ -5,8 +5,9 @@ description: Filtering VCF with dynamically-compiled java expressions
 keywords:
   - vcf
   - bcf
-  - annotation
-  - repeats
+  - filter
+  - java
+  - script
 tools:
   - "jvarkit":
       description: "Java utilities for Bioinformatics."
