--- a/modules/nf-core/jvarkit/vcf2table/environment.yml
+++ b/modules/nf-core/jvarkit/vcf2table/environment.yml
@@ -1,5 +1,6 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
+name: jvarkit_vcf2table
 channels:
   - conda-forge
   - bioconda
