--- a/modules/nf-core/jvarkit/vcf2table/tests/nextflow.config
+++ b/modules/nf-core/jvarkit/vcf2table/tests/nextflow.config
@@ -1,8 +1,8 @@
 process {
 
 
-    withName: JVARKIT_VCFFILTERJDK {
-        ext.args2=" --expression 'return variant.getStart()%2==1;' "
+    withName: JVARKIT_VCF2TABLE {
+        ext.args2=" --hide NO_CALL "
     }
 
 }
