--- a/modules/nf-core/jvarkit/vcf2table/tests/tags.yml
+++ b/modules/nf-core/jvarkit/vcf2table/tests/tags.yml
@@ -1,2 +1,2 @@
-jvarkit/vcffilterjdk:
-  - "modules/nf-core/jvarkit/vcffilterjdk/**"
+jvarkit/vcf2table:
+  - "modules/nf-core/jvarkit/vcf2table/**"
