--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -541,6 +541,14 @@ jobs:
           - profile: conda
             path: modules/nf-core/deepvariant
           - profile: conda
+            path: modules/nf-core/deepvariant/callvariants
+          - profile: conda
+            path: modules/nf-core/deepvariant/makeexamples
+          - profile: conda
+            path: modules/nf-core/deepvariant/postprocessvariants
+          - profile: conda
+            path: modules/nf-core/deepvariant/rundeepvariant
+          - profile: conda
             path: modules/nf-core/ensemblvep/vep
           - profile: conda
             path: modules/nf-core/fastk/fastk
@@ -630,6 +638,8 @@ jobs:
             path: subworkflows/nf-core/vcf_annotate_ensemblvep
           - profile: conda
             path: subworkflows/nf-core/bcl_demultiplex
+          - profile: conda
+            path: subworkflows/nf-core/deepvariant
           - profile: conda
             path: subworkflows/nf-core/fastq_align_bamcmp_bwa
           - profile: conda
