--- a/modules/nf-core/deepvariant/makeexamples/meta.yml
+++ b/modules/nf-core/deepvariant/makeexamples/meta.yml
@@ -1,5 +1,5 @@
-name: deepvariant
-description: (DEPRECATED - see main.nf) DeepVariant is an analysis pipeline that uses a deep neural network to call genetic variants from next-generation DNA sequencing data
+name: deepvariant_makeexamples
+description: Transforms the input alignments to a format suitable for the deep neural network variant caller
 keywords:
   - variant calling
   - machine learning
@@ -26,7 +26,7 @@ input:
       type: file
       description: Index of BAM/CRAM file
       pattern: "*.bai/crai"
-  - interval:
+  - intervals:
       type: file
       description: Interval file for targeted regions
       pattern: "*.bed"
@@ -56,37 +56,33 @@ input:
   - gzi:
       type: file
       description: GZI index of reference fasta file
-      pattern: "*.gzi"
   - meta5:
       type: map
       description: |
         Groovy Map containing reference information
         e.g. [ id:'genome' ]
+      pattern: "*.gzi"
   - par_bed:
       type: file
       description: BED file containing PAR regions
       pattern: "*.bed"
 output:
-  - meta:
-      type: map
+  - examples:
+      type: list
       description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
-  - vcf:
-      type: file
-      description: Compressed VCF file
-      pattern: "*.vcf.gz"
+        Tuple containing sample metadata and examples that can be used for calling
   - gvcf:
+      type: list
+      description: |
+        Tuple containing sample metadata and the GVCF data in tfrecord format
+  - versions:
       type: file
-      description: Compressed GVCF file
-      pattern: "*.g.vcf.gz"
-  - version:
-      type: file
-      description: File containing software version
-      pattern: "*.{version.txt}"
+      description: File containing the DeepVariant software version
+      pattern: "versions.yml"
 authors:
   - "@abhi18av"
   - "@ramprasadn"
+  - "@fa2k"
 maintainers:
   - "@abhi18av"
   - "@ramprasadn"
