--- a/modules/nf-core/deepvariant/postprocessvariants/meta.yml
+++ b/modules/nf-core/deepvariant/postprocessvariants/meta.yml
@@ -1,5 +1,5 @@
-name: deepvariant
-description: (DEPRECATED - see main.nf) DeepVariant is an analysis pipeline that uses a deep neural network to call genetic variants from next-generation DNA sequencing data
+name: deepvariant_postprocessvariants
+description: DeepVariant is an analysis pipeline that uses a deep neural network to call genetic variants from next-generation DNA sequencing data
 keywords:
   - variant calling
   - machine learning
@@ -18,18 +18,16 @@ input:
       description: |
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
-  - input:
+  - variant_calls_tfrecord_files:
       type: file
-      description: BAM/CRAM file
-      pattern: "*.bam/cram"
-  - index:
+      description: |
+        One or more data files containing variant calls from DEEPVARIANT_CALLVARIANTS
+      pattern: "*.tfrecord.gz"
+  - gvcf_tfrecords:
       type: file
-      description: Index of BAM/CRAM file
-      pattern: "*.bai/crai"
-  - interval:
-      type: file
-      description: Interval file for targeted regions
-      pattern: "*.bed"
+      description: |
+        Sharded tfrecord file from DEEPVARIANT_MAKEEXAMPLES with the coverage information used for GVCF output
+      pattern: "*.gz"
   - meta2:
       type: map
       description: |
@@ -57,15 +55,6 @@ input:
       type: file
       description: GZI index of reference fasta file
       pattern: "*.gzi"
-  - meta5:
-      type: map
-      description: |
-        Groovy Map containing reference information
-        e.g. [ id:'genome' ]
-  - par_bed:
-      type: file
-      description: BED file containing PAR regions
-      pattern: "*.bed"
 output:
   - meta:
       type: map
@@ -76,17 +65,26 @@ output:
       type: file
       description: Compressed VCF file
       pattern: "*.vcf.gz"
+  - vcf_tbi:
+      type: file
+      description: Index for VCF
+      pattern: "*.vcf.gz.tbi"
   - gvcf:
       type: file
       description: Compressed GVCF file
       pattern: "*.g.vcf.gz"
-  - version:
+  - gvcf_tbi:
+      type: file
+      description: Index for GVCF
+      pattern: "*.g.vcf.gz.tbi"
+  - versions:
       type: file
       description: File containing software version
-      pattern: "*.{version.txt}"
+      pattern: "versions.yml"
 authors:
   - "@abhi18av"
   - "@ramprasadn"
+  - "@fa2k"
 maintainers:
   - "@abhi18av"
   - "@ramprasadn"
