--- a/modules/nf-core/deepvariant/rundeepvariant/meta.yml
+++ b/modules/nf-core/deepvariant/rundeepvariant/meta.yml
@@ -1,5 +1,5 @@
-name: deepvariant
-description: (DEPRECATED - see main.nf) DeepVariant is an analysis pipeline that uses a deep neural network to call genetic variants from next-generation DNA sequencing data
+name: deepvariant_rundeepvariant
+description: DeepVariant is an analysis pipeline that uses a deep neural network to call genetic variants from next-generation DNA sequencing data
 keywords:
   - variant calling
   - machine learning
