--- a/modules/nf-core/motus/preplong/meta.yml
+++ b/modules/nf-core/motus/preplong/meta.yml
@@ -7,7 +7,7 @@ keywords:
   - taxonomic profiling
 tools:
   - "motus":
-      description: "Marker gene-based OTU (mOTU) profiling"
+      description: "Marker gene-based operational taxonomic unit (mOTU) profiling"
       homepage: "https://motu-tool.org/"
       documentation: "https://github.com/motu-tool/mOTUs/wiki"
       tool_dev_url: "https://github.com/motu-tool/mOTUs"
