--- a/modules/nf-core/megahit/meta.yml
+++ b/modules/nf-core/megahit/meta.yml
@@ -14,16 +14,28 @@ tools:
       tool_dev_url: https://github.com/voutcn/megahit
       doi: "10.1093/bioinformatics/btv033"
       licence: ["GPL v3"]
+      args_id: "$args"
+  - pigz:
+      description: "Parallel implementation of the gzip algorithm."
+      homepage: "https://zlib.net/pigz/"
+      documentation: "https://zlib.net/pigz/pigz.pdf"
+      args_id: "$args2"
+
 input:
   - meta:
       type: map
       description: |
         Groovy Map containing sample information and input single, or paired-end FASTA/FASTQ files (optionally decompressed)
         e.g. [ id:'test', single_end:false ]
-  - reads:
+  - reads1:
       type: file
       description: |
-        List of input FastQ files of size 1 and 2 for single-end and paired-end data,
+        A single or list of input FastQ files for single-end or R1 of paired-end library(s),
+        respectively in gzipped or uncompressed FASTQ or FASTA format.
+  - reads2:
+      type: file
+      description: |
+        A single or list of input FastQ files for R2 of paired-end library(s),
         respectively in gzipped or uncompressed FASTQ or FASTA format.
 output:
   - meta:
@@ -55,6 +67,10 @@ output:
       type: file
       description: Stand-alone contigs for k=K; if local assembly is turned on, the file will be empty
       pattern: "k*.final.contigs.fa.gz"
+  - log:
+      type: file
+      description: Log file containing statistics of the assembly output
+      pattern: "*.log"
 authors:
   - "@jfy133"
 maintainers:
