4451 add vcf2maf nf test (#4463)
* add nf-test case for vcf2maf without VEP

* add VEP test case for vcf2maf nf-test

* update linting for vcf2maf

* fix prettier for vcf2maf

* remove pytest files for vcf2maf

* remove vcf2maf from pytest modules yml

* add modules/nf-core/vcf2maf/tests/tags.yml

* add line count to vcf2maf test

* add line number and versions contents yaml to vcf2maf test

* remove alternate container from vcf2maf testing and use the same container for testing with or without VEP

* update modules/nf-core/vcf2maf/tests/main.nf.test

* update modules/nf-core/vcf2maf/tests/main.nf.test

* Update and fix tests

* Apply suggestions from code review

Co-authored-by: Simon Pearce <24893913+SPPearce@users.noreply.github.com>

* Add conda declaration to nf-test

* Remove output in snapshot

* Add versions to snapshot

---------

Co-authored-by: Simon Pearce <24893913+SPPearce@users.noreply.github.com>
Co-authored-by: Adam Talbot <12817534+adamrtalbot@users.noreply.github.com>

--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -813,9 +813,9 @@ varlociraptor/callvariants:
 varlociraptor/preprocess:
   - modules/nf-core/varlociraptor/preprocess/**
   - tests/modules/nf-core/varlociraptor/preprocess/**
-vcf2maf:
-  - modules/nf-core/vcf2maf/**
-  - tests/modules/nf-core/vcf2maf/**
+vcflib/vcfbreakmulti:
+  - modules/nf-core/vcflib/vcfbreakmulti/**
+  - tests/modules/nf-core/vcflib/vcfbreakmulti/**
 verifybamid/verifybamid2:
   - modules/nf-core/verifybamid/verifybamid2/**
   - tests/modules/nf-core/verifybamid/verifybamid2/**
