--- a/modules/nf-core/jvarkit/wgscoverageplotter/meta.yml
+++ b/modules/nf-core/jvarkit/wgscoverageplotter/meta.yml
@@ -45,7 +45,7 @@ input:
       type: map
       description: |
         Groovy Map containing reference fai information
-      pattern: "*.fai"
+      e.g. [ id:'test_reference' ]
   - fai:
       type: file
       description: Index of reference fasta file
@@ -54,7 +54,7 @@ input:
       type: map
       description: |
         Groovy Map containing reference dict information
-      pattern: "*.dict"
+      e.g. [ id:'test_reference' ]
   - dict:
       type: file
       description: GATK sequence dictionary
