--- a/modules/nf-core/mirtop/gff/meta.yml
+++ b/modules/nf-core/mirtop/gff/meta.yml
@@ -46,11 +46,7 @@ output:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
-  - mirtop_gff:
-      type: file
-      description: GFF file
-      pattern: "*.{gff}"
-  - sample_gff:
+  - gff:
       type: file
       description: GFF file
       pattern: "*.{gff}"
