--- a/modules/nf-core/mirtop/stats/meta.yml
+++ b/modules/nf-core/mirtop/stats/meta.yml
@@ -39,6 +39,10 @@ output:
       type: file
       description: TXT file with stats
       pattern: "*.{txt}"
+  - log:
+      type: file
+      description: log file with stats
+      pattern: "*.{log}"
 
 authors:
   - "@atrigila"
