--- a/modules/nf-core/seurat/multiseqdemux/meta.yml
+++ b/modules/nf-core/seurat/multiseqdemux/meta.yml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
-name: "seurat_multiseq"
+name: "seurat_multiseqdemux"
 description: Identify singlets, doublets and negative cells from multiplexing experiments. Annotate singlets by tags
 keywords:
   - demultiplexing
