--- a/modules/nf-core/seurat/multiseqdemux/tests/nextflow.config
+++ b/modules/nf-core/seurat/multiseqdemux/tests/nextflow.config
@@ -35,7 +35,7 @@ params{
 }
 
 process{
-    withName:SEURAT_MULTISEQ{
+    withName:SEURAT_MULTISEQDEMUX{
         ext.args = "--assay ${params.assay} --nfeatures ${params.nfeatures} --quantile ${params.quantile} --autoThresh ${params.autoThresh} --maxiter ${params.maxiter} --qrange_from ${params.qrange_from} --qrange_to ${params.qrange_to} --qrange_by ${params.qrange_by} --verbose ${params.verbose} --selection_method ${params.selection_method} --normalization_method ${params.normalization_method} --group_cells_feature_scatter ${params.group_cells_feature_scatter} --feature_scatter_feature_1 ${params.feature_scatter_feature_1} --feature_scatter_feature_2 ${params.feature_scatter_feature_2} --number_of_features_ridge_plot ${params.number_of_features_ridge_plot} --number_of_cols_ridge_plot ${params.number_of_cols_ridge_plot} --group_cells_violin_plot ${params.group_cells_violin_plot} --features_violin_plot ${params.features_violin_plot} --pt_size ${params.pt_size} --log ${params.log} --subset_idents ${params.subset_idents} --subset_invert ${params.subset_invert} --tsne_scale_data_verbose ${params.tsne_scale_data_verbose} --run_pca_approx ${params.run_pca_approx} --run_tsne_dim_max ${params.run_tsne_dim_max} --run_tsne_perplexity ${params.run_tsne_perplexity} --check_duplicates_tsne ${params.check_duplicates_tsne} --resolution ${params.resolution} --singlet_identities_tsne ${params.singlet_identities_tsne}"
     }
 
