--- a/modules/nf-core/jvarkit/vcffilterjdk/meta.yml
+++ b/modules/nf-core/jvarkit/vcffilterjdk/meta.yml
@@ -6,6 +6,7 @@ keywords:
   - vcf
   - bcf
   - filter
+  - variant
   - java
   - script
 tools:
@@ -16,6 +17,7 @@ tools:
       tool_dev_url: "https://github.com/lindenb/jvarkit"
       doi: "10.1093/bioinformatics/btx734 "
       licence: ["MIT License"]
+      args_id: "$args2"
 
   - "bcftools":
       description: |
@@ -24,19 +26,20 @@ tools:
       documentation: "http://www.htslib.org/doc/bcftools.html"
       doi: "10.1093/bioinformatics/btp352"
       licence: ["MIT"]
-
+      args_id: ["$args1","$args3"]
 input:
   - meta:
       type: map
       description: |
         Groovy Map containing VCF information
+        e.g. [ id:'test_reference' ]
   - vcf:
       type: file
-      description: Groovy Map containing reference genome information for vcf
+      description: Input VCF/BCF file
       pattern: "*.{vcf,bcf,vcf.gz,bcf.gz}"
   - tbi:
       type: file
-      description: Optional index file for the VCF
+      description: Optional VCF/BCF index file
       pattern: "*.{tbi,csi}"
   - regions_file:
       type: file
@@ -46,6 +49,7 @@ input:
       type: map
       description: |
         Groovy Map containing fasta information
+        e.g. [ id:'test_reference' ]
   - fasta:
       type: file
       description: Groovy Map containing reference genome information for fai reference fasta file
@@ -54,6 +58,7 @@ input:
       type: map
       description: |
         Groovy Map containing fasta.fai information
+        e.g. [ id:'test_reference' ]
   - fai:
       type: file
       description: Groovy Map containing reference genome information for fai
@@ -62,6 +67,7 @@ input:
       type: map
       description: |
         Groovy Map containing fasta.dict information
+        e.g. [ id:'test_reference' ]
   - dict:
       type: file
       description: Groovy Map containing reference genome information for GATK sequence dictionary
@@ -70,10 +76,20 @@ input:
       type: map
       description: |
         Groovy Map containing code information
+        e.g. [ id:'test_reference' ]
   - code:
       type: file
-      description: custom user Code . May be empty if script if provided via `task.ext.args2`.
+      description: custom user code . May be empty if script if provided via `task.ext.args2`.
       pattern: "*.{code,script,txt,tsv,java,js}"
+  - meta6:
+      type: map
+      description: |
+        Groovy Map containing pedigree information
+        e.g. [ id:'test_reference' ]
+  - pedigree:
+      type: file
+      description: Optional jvarkit pedigree.
+      pattern: "*.{tsv,ped,pedigree}"
 output:
   - meta:
       type: map
