Add openmsthirdparty/cometadapter (#6627)
* Setup cometadapter module

* cometadapter draft

* finalize tests

* remove defaults

* enclosing input as channel

* replace collect with map

* add channel of again

* fix input channles by joining them

* update correct snapshot

* fix lint

* fix snapshots, comet writes timestamps in output file

* prettier

* Update environment.yml

* strip out suffix version tag, which differs between container and conda

* move to version content check instead of hash

* align conda version and container version tag

--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -769,6 +769,7 @@ params {
             }
             'database' {
                 yeast_ups                       = "${params.test_data_base}/data/proteomics/database/yeast_UPS.fasta"
+                swissprot                       = "${params.test_data_base}/data/proteomics/database/UP000005640_9606.fasta"
             }
             'maxquant' {
                 mq_contrasts                    = "${params.test_data_base}/data/proteomics/maxquant/MaxQuant_contrasts.csv"
