remove error detailing tool url

--- a/modules/nf-core/shigapass/meta.yml
+++ b/modules/nf-core/shigapass/meta.yml
@@ -7,9 +7,9 @@ keywords:
 tools:
   - shigapass:
       description: Mass screening of contigs for antibiotic resistance genes
-      homepage: https://github.com/tseemann/abricate
-      documentation: https://github.com/tseemann/abricate
-      tool_dev_url: https://github.com/tseemann/abricate
+      homepage: https://github.com/imanyass/ShigaPass
+      documentation: https://github.com/imanyass/ShigaPass
+      tool_dev_url: https://github.com/imanyass/ShigaPass
       licence: ["GPL v3"]
 input:
   - meta:
