--- a/modules/nf-core/upp/align/meta.yml
+++ b/modules/nf-core/upp/align/meta.yml
@@ -35,7 +35,7 @@ input:
       pattern: "*.{dnd}"
   - compress:
       type: boolean
-      description: Flag representing whether the output MSA should be compressed. Set to true to enable/false to disable compression. Compression is handled by passing '-gz' to FAMSA along with any other options specified in task.ext.args.
+      description: Flag representing whether the output MSA should be compressed. Set to true to enable/false to disable compression.
 output:
   - meta:
       type: map
