Update tests and meta

--- a/modules/nf-core/umitools/group/meta.yml
+++ b/modules/nf-core/umitools/group/meta.yml
@@ -55,6 +55,10 @@ output:
       type: file
       description: Flatfile describing the read groups, see docs for complete info of all columns
       pattern: "*.{tsv}"
+  - versions:
+      type: file
+      description: File containing software versions
+      pattern: "versions.yml"
 authors:
   - "@Joon-Klaps"
 maintainers:
