--- a/modules/nf-core/jvarkit/vcffilterjdk/meta.yml
+++ b/modules/nf-core/jvarkit/vcffilterjdk/meta.yml
@@ -52,7 +52,7 @@ input:
         e.g. [ id:'test_reference' ]
   - fasta:
       type: file
-      description: Groovy Map containing reference genome information for fai reference fasta file
+      description: Groovy Map containing fasta reference genome information
       pattern: "*.fasta"
   - meta3:
       type: map
@@ -61,7 +61,7 @@ input:
         e.g. [ id:'test_reference' ]
   - fai:
       type: file
-      description: Groovy Map containing reference genome information for fai
+      description: Groovy Map containing fasta index information
       pattern: "*.fasta.fai"
   - meta4:
       type: map
