--- a/modules/nf-core/star/align/environment.yml
+++ b/modules/nf-core/star/align/environment.yml
@@ -2,7 +2,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - bioconda::star=2.7.10a
-  - bioconda::samtools=1.18
-  - bioconda::htslib=1.18
-  - conda-forge::gawk=5.1.0
+  - bioconda::star=2.7.11b
+
