Tcoffee stub tests (#6555)
* Fix align module test

* Fix nf-tests

* update typos

* Update snaps

* Update modules/nf-core/tcoffee/align/tests/main.nf.test

Co-authored-by: Famke Bäuerle <45968370+famosab@users.noreply.github.com>

* Update modules/nf-core/tcoffee/align/tests/main.nf.test

Co-authored-by: Famke Bäuerle <45968370+famosab@users.noreply.github.com>

* Update modules/nf-core/tcoffee/alncompare/tests/main.nf.test

Co-authored-by: Famke Bäuerle <45968370+famosab@users.noreply.github.com>

* update tetss

* update tests align

* update tests

* update irmsd test

* Update modules/nf-core/tcoffee/align/main.nf

Co-authored-by: Jose Espinosa-Carrasco <kadomu@gmail.com>

* Update modules/nf-core/tcoffee/alncompare/main.nf

Co-authored-by: Jose Espinosa-Carrasco <kadomu@gmail.com>

* Update modules/nf-core/tcoffee/irmsd/main.nf

Co-authored-by: Jose Espinosa-Carrasco <kadomu@gmail.com>

* Update modules/nf-core/tcoffee/irmsd/tests/main.nf.test

Co-authored-by: Jose Espinosa-Carrasco <kadomu@gmail.com>

* Update modules/nf-core/tcoffee/seqreformat/main.nf

Co-authored-by: Jose Espinosa-Carrasco <kadomu@gmail.com>

* Update modules/nf-core/tcoffee/tcs/main.nf

Co-authored-by: Jose Espinosa-Carrasco <kadomu@gmail.com>

* Update modules/nf-core/tcoffee/tcs/meta.yml

Co-authored-by: Jose Espinosa-Carrasco <kadomu@gmail.com>

* remove changes in consensus

* fix

* update snap

* add

* add tree test

* rerun

* test

* test

---------

Co-authored-by: Famke Bäuerle <45968370+famosab@users.noreply.github.com>
Co-authored-by: Jose Espinosa-Carrasco <kadomu@gmail.com>
Co-authored-by: Maxime U Garcia <max.u.garcia@gmail.com>

--- a/modules/nf-core/tcoffee/tcs/meta.yml
+++ b/modules/nf-core/tcoffee/tcs/meta.yml
@@ -29,6 +29,11 @@ input:
       type: file
       description: fasta file containing the alignment to be evaluated. May be gzipped or uncompressed.
       pattern: "*.{aln,fa,fasta,fas}{.gz,}"
+  - meta2:
+      type: map
+      description: |
+        Groovy Map containing library information
+        e.g. [ id:'test', ... ]
   - lib:
       type: file
       description: lib file containing the alignment library of the given msa.
