--- a/modules/nf-core/mirtop/counts/environment.yml
+++ b/modules/nf-core/mirtop/counts/environment.yml
@@ -4,6 +4,12 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - "bioconda::mirtop=0.4.25"
+  - "bioconda::mirtop=0.4.28"
+  - "bioconda::samtools=1.21"
+  - "conda-forge::python=3.11"
+  - "conda-forge::biopython=1.83"
+  - "bioconda::pysam=0.22.1"
+  - "bioconda::pybedtools=0.10.0"
+  - "conda-forge::pandas=2.2.2"
   - "conda-forge::r-base=4.1.1"
   - "conda-forge::r-data.table=1.14.2"
